# PCSC_Eigenvalue_Solver_Project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
core/: types.hpp
data/: A.txt  B.txt
docs/html/: annotated.html  box_8hpp.html  classBox.html  classBoxTyped-members.html  classBoxTyped__coll__graph.dot  classMatrix-members.html  classMatrix.html  classes.html  dir_000005_000000.html  dir_109f68d84cef4a133396a0be144fa9b1.html  dir_c8c355096de1738481424562f58bdf85.html  eigen__solver__base_8hpp_source.html  formula.repository  functions_vars.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_4.dot  matrix_8hpp.html  matrix_8hpp_source.html  menudata.js  power__solver_8hpp_source.html  qr__factoriser_8hpp_source.html  qr__result_8hpp_source.html  shifted__option_8hpp_source.html  structQRResult-members.html  structQRResult.html  structShiftedOptions-members.html  structShiftedOptions.html  structSolverOptions-members.html  structSolverOptions.html
docs/html/search/: all_1.js  all_2.js  all_4.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_3.js  files_0.js  functions_1.js  functions_2.js  functions_7.js  functions_9.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: annotated.tex  box_8hpp.tex  box_8hpp.tex.tmp  box_8hpp__incl.dot  box_8hpp_source.tex  box__typed_8hpp__dep__incl.dot  classBoxTyped__coll__graph.dot  classBox__inherit__graph.dot  classMatrix.tex  eigen__solver__base_8hpp_source.tex  matrix_8hpp.tex  matrix_8hpp__incl.dot  power__solver_8hpp_source.tex  refman.tex  shifted__option_8hpp_source.tex
html/: _formulas.tex  _formulas_dark.tex  add_8hpp_source.html  annotated.html  box_8hpp__dep__incl.dot  box_8hpp__incl.dot  box_8hpp_source.html  box__typed_8hpp.html  box__typed_8hpp__dep__incl.dot  box__typed_8hpp__incl.dot  box__typed_8hpp_source.html  classBox-members.html  classBoxTyped.html  classBox__inherit__graph.dot  classMatrix-members.html  classMatrix.html  classes.html  dense__matrix__base_8hpp_source.html  dir_000002_000000.html  dir_000005_000002.html  dir_109f68d84cef4a133396a0be144fa9b1.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_14cdc03a19eab6990dbe8117f049eb54.html  dir_14cdc03a19eab6990dbe8117f049eb54_dep.dot  dir_c0057ecd6c4064558988e0c288251bdd.html  dir_f112a198c59b5e222ed0944bb01b4e63.html  eigen__matrix__adapter_8hpp_source.html  eigen__result_8hpp_source.html  eigen__sparse__matrix__adapter_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_2.dot  inherit_graph_3.dot  (+26 more)
html/search/: all_0.js  all_2.js  all_6.js  all_7.js  all_a.js  files_2.js  functions_0.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  searchdata.js  variables_3.js  variables_4.js  variables_5.js
latex/: add_8hpp_source.tex  annotated.tex  box_8hpp__dep__incl.dot  box__typed_8hpp.tex  box__typed_8hpp__dep__incl.dot  box__typed_8hpp__incl.dot  box__typed_8hpp_source.tex  classBox.tex  classBoxTyped.tex  classMatrix.tex  dense__matrix__base_8hpp_source.tex  eigen__matrix__adapter_8hpp_source.tex  eigen__result_8hpp_source.tex  eigen__sparse__matrix__adapter_8hpp_source.tex  files.tex  hierarchy.tex  matrix_8hpp.tex  matrix_8hpp__dep__incl.dot  matrix_8hpp__incl.dot  matrix_8hpp_source.tex  matrix__base_8hpp_source.tex  qr__factoriser_8hpp_source.tex  qr__method_8hpp_source.tex  qr__result_8hpp_source.tex  refman.tex  shifted__inverse__power__solver_8hpp_source.tex  shifted__option_8hpp_source.tex  solve__shifted_8hpp.tex  solve__shifted_8hpp__incl.dot  solve__shifted_8hpp_source.tex  solver__option_8hpp_source.tex  structEigenResult.tex  structEigenResult__coll__graph.dot  structQRResult.tex  structShiftedOptions.tex  structShiftedOptions__coll__graph.dot  structSolverOptions.tex
matrix/: box_typed.hpp  dense_matrix_base.hpp  eigen_matrix_adapter.hpp  matrix.hpp  matrix_base.hpp
option/: shifted_option.hpp  solver_option.hpp
power_method/: solve_shifted.hpp
result/: eigen_result.hpp  qr_result.hpp
src/box/: box.hpp  box_typed.hpp
src/core/: tolerance.hpp  types.hpp
src/matrix/: matrix.hpp  solve_shifted.hpp
src/option/: shifted_option.hpp  shifted_solver_option.hpp  solver_option.hpp
src/power_method/: power_method.hpp  shifted_inverse_power_solver.hpp  solve_shifted.hpp
src/qr_method/: qr_decompose.hpp  qr_eigenvalues.hpp  to_hessenberg.hpp
src/reader/: file_matrix_reader.hpp
src/result/: eigen_result.hpp  qr_result.hpp
test/: CMakeLists.txt  add.cpp  eigen_matrix_adapter_test.cpp  first_test.cpp  matrix_wrapper_test.cpp  power_method_test.cpp  qr_algorithms_test.cpp  shifted_inverse_power_method_test.cpp  solve_shifted_test.cpp
